<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="welcome">Sign up was successful %s</string>
    <string name="sign_in_welcome">Sign in was successful %s</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="All_fields_must_me_full">All fields must be full</string>
    <string name="passwords_do_not_match">passwords don\'t match</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="or_continue_with">or continue with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exchange_rates">Exchange rates</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="tasks">tasks</string>
    <string name="Rankings">Rankings</string>
    <string name="login">login</string>
    <string name="transactions">transactions</string>
    <string name="tbc_market_value">TBC Market value</string>
    <string name="buy">buy</string>
    <string name="sell">sell</string>
    <string name="price">%s₾</string>
    <string name="name">tribe name</string>
    <string name="invite">invite link</string>
    <string name="description">description</string>
    <string name="profile">profile</string>
    <string name="create">Create</string>
    <string name="log_out">log out</string>
    <string name="manage_tribe">Manage Tribe</string>
    <string name="create_tribe">Create Tribe</string>
    <string name="join_tribe">join Tribe</string>
    <string name="cant_create">you need to leave tribe to create new one</string>
    <string name="already_in_tribe">you are already in the tribe</string>
    <string name="completed">Completed ?</string>

    <string name="dialog">TribeDialog</string>
    <string name="token">token</string>
    <string name="user">user</string>
    <string name="tribes">tribes</string>
    <string name="tribeId">tribeId</string>
    <string name="notInTribe">you need to be in the tribe to manage one</string>
    <string name="Key1">requestKeys</string>
    <string name="key2">bundleKeys</string>
    <string name="key3">requestKey</string>
    <string name="key4">bundleKey</string>
    <string name="error">error</string>
    <string name="tribe_url">https://expensetracker-9f76c-default-rtdb.firebaseio.com/</string>
</resources>
