<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signin.SignInFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/primary_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l"
        android:layout_marginTop="@dimen/spacing_8xl"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:boxCornerRadiusBottomEnd="@dimen/spacing_x"
        app:boxCornerRadiusTopEnd="@dimen/spacing_x"
        app:boxCornerRadiusTopStart="@dimen/spacing_x"
        app:boxCornerRadiusBottomStart="@dimen/spacing_x"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l"
        android:layout_marginTop="@dimen/spacing_l"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:boxCornerRadiusBottomEnd="@dimen/spacing_x"
        app:boxCornerRadiusTopEnd="@dimen/spacing_x"
        app:boxCornerRadiusTopStart="@dimen/spacing_x"
        app:boxCornerRadiusBottomStart="@dimen/spacing_x"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintTop_toBottomOf="@+id/etEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:layout_marginStart="@dimen/spacing_l"
        android:layout_marginEnd="@dimen/spacing_l"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_l"
        android:text="@string/or_continue_with"
        android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_4xl"
        android:text="@string/don_t_have_an_account"
        android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
        android:textSize="16sp"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvForMargins"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_2xs"
        android:layout_marginBottom="@dimen/spacing_4xl"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.ExpenseTracker.Text.Body"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvForMargins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_2xs"
        android:layout_marginBottom="@dimen/spacing_4xl"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
